--- a/app/styles/base/_foundation-settings.scss
+++ b/app/styles/base/_foundation-settings.scss
@@ -50,10 +50,10 @@ $global-font-size: 100%;
 $global-width: rem-calc(1200);
 $global-lineheight: 1.5;
 $foundation-palette: (
-  primary: #1779ba,
-  secondary: #767676,
-  success: #3adb76,
-  warning: #ffae00,
+  primary: #000,
+  secondary: #E4A492,
+  success: #EDEDE6,
+  warning: #BFB18A,
   alert: #cc4b37,
 );
 $light-gray: #e6e6e6;
@@ -63,7 +63,7 @@ $black: #0a0a0a;
 $white: #fefefe;
 $body-background: $white;
 $body-font-color: $black;
-$body-font-family: 'Helvetica Neue', Helvetica, Roboto, Arial, sans-serif;
+$body-font-family: 'Open Sans', sans-serif;
 $body-antialiased: true;
 $global-margin: 1rem;
 $global-padding: 1rem;
